--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Interactive simulations to practice programming </title>
-<link rel="stylesheet" text="text/css" href="mainstyles.css"
+<link rel="stylesheet" text="text/css" href="mainstyles.css">
 </head>
 <body>
 <h1> Hello world </h1>
