--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
 <h1> Hello world </h1>
 <canvas />
+  <script> alert("Here's the JS") </script>
+  <script lang="python"> print("hello world") </script>
 </body>
 </html>
